2008-10-02  Derek R. Price  <derek@ximbiot.com>

	* history.c: Some cleanup.
	(expand_modules): Removed this stub function.
	(get_history_log_name): Don't return const since it is freshly
	allocated.
	(history_write): Add version number to history records.  Use tag
	fields like other record types.
	(fill_hrec): Load version number & postprocess history records as
	needed.  Zero records with memset.
	(read_hrecs_file): Don't zero records redundantly with fill_hrec().
	(report_hrecs): Find tag data in the same place as other record types.
	* sanity.sh (basic2-64): Expect new tag records.
	* tag.c: Some cleanup.
	(cvstag): Move history log call to...
	(tag_filesdoneproc): ...here, where we have more information.

	* modules.c (my_module): Clean up TRACE.
	* subr.h [NULL2DOT, NULL2MT]: Add parens for safety.

2008-09-30  Derek R. Price  <derek@ximbiot.com>

	* checkout.c (preload_update_dir): Eliminate global.  It was used in
	only one function which restored its state on exit, and it even
	uselessly duplicated the value of another variable within that
	function.

2008-09-29  Derek R. Price  <derek@ximbiot.com>

	* client.c (is_cvsroot_level): Replace a conditional with an
	assertion.

	* log.c (rlog_proc): Avoid adding trailing /. to repository.  Some
	cleanup.
	* recurse.c (repository, struct recursion_frame, start_recursion):
	Declare repository const char *.
	(do_recursion, do_dir_proc): Ditto.  Some cleanup.
	* recurse.h (start_recursion): Update prototype to match.
	* subr.h (REPLACE): New convenience macro.
	* update.c (do_update): Cleanup traces.

	* client.c (is_cvsroot_level): Improve commenting, minor cleanup.

2008-09-28  Derek R. Price  <derek@ximbiot.com>

	* checkout.c (checkout): Minor cleanup.
	* parseinfo.c (Parse_Info): Add function trace.

	Fixes recurse.c error from two commits back by correctly preserving
	and composing update_dir.  Incidentally fixes a few other minor bugs.
	* commit.c (commit_direntproc): Handle corrected update_dir.